dist_man1_MANS=

if BUILD_EOZID
  dist_man1_MANS+=eozid.1
endif

if ENABLE_QT
  dist_man1_MANS+=eozi-qt.1
endif

if BUILD_EOZI_CLI
  dist_man1_MANS+=eozi-cli.1
endif

if BUILD_EOZI_TX
  dist_man1_MANS+=eozi-tx.1
endif

if ENABLE_WALLET
if BUILD_EOZI_WALLET
  dist_man1_MANS+=eozi-wallet.1
endif
endif
